# rocket-mongo

./: Cargo.toml  README.md  config.yml
.github/workflows/: ci.yml
src/: error.rs
src/db/: mod.rs
src/server/: config.rs  mod.rs
