[package]
name = "rocketapi"
version = "0.2.1"
description = "REST API Service using Rust & Rocket with MongoDB as backend"
authors = ["Marirs <marirs@gmail.com>"]
categories = ["web-programming"]
keywords = ["rocket", "rust", "rest", "api", "mongo", "database"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/rocket-mongo"
edition = "2018"

[dependencies]
clap ="3.0.0-beta.2"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
futures = "0.3.16"
openssl = "0.10.35"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "tls"] }
serde = { version = "1.0.127", features = ["derive"] }
thiserror = "1.0.26"
derive_more = { version = "0.99.16", features = ["deref"] }
uuid = { version = "0.8.2", features = ["v5"] }

[dependencies.mongodb]
version = "1.2.2"
default-features = false
features = ["async-std-runtime"]

[[bin]]
name = "rocketapi"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
